add verify email and send new verify email link methods in users-service and api-gateway
