# services/api-gateway/docs/swagger.yaml
@@ -59,12 +59,21 @@ definitions:
         description: The localized error message in the above locale.
         type: string
     type: object
+  github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LocalSession:
+    properties:
+      sid:
+        type: string
+      uid:
+        type: string
+    type: object
   github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LoginErrorResponse:
     properties:
       message:
         type: string
       type:
         $ref: '#/definitions/github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LoginErrorResponseType'
+      user_id:
+        type: string
     required:
     - message
     - type
@@ -200,6 +209,11 @@ definitions:
     required:
     - id
     type: object
+  userspb.EmailVerifiedSuccess:
+    properties:
+      message:
+        type: string
+    type: object
   userspb.GenderValue:
     enum:
     - 0
@@ -244,6 +258,11 @@ definitions:
     required:
     - gender
     - updated_at
+    type: object
+  userspb.SendNewEmailVerifyLinkRequest:
+    properties:
+      user_id:
+        type: string
     type: object
   userspb.UpdateUserProfileData:
     properties:
@@ -297,6 +316,18 @@ definitions:
     - profile
     - updated_at
     type: object
+  userspb.VerifyEmailLinkExpired:
+    properties:
+      message:
+        type: string
+      user_id:
+        type: string
+    type: object
+  userspb.VerifyEmailLinkNotFound:
+    properties:
+      message:
+        type: string
+    type: object
 info:
   contact:
     email: f3d0t0tvmax@yandex.ru
@@ -305,6 +336,36 @@ info:
   title: Swagger Documentation for microservices shop API Gateway
   version: "1.0"
 paths:
+  /customers/session/check:
+    get:
+      consumes:
+      - application/json
+      description: Checking session auth for protected client routing
+      parameters:
+      - description: Locale
+        in: header
+        name: X-Request-Locale
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LocalSession'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Check session auth
+      tags:
+      - customers
   /customers/session/login:
     post:
       consumes:
@@ -510,6 +571,81 @@ paths:
       security:
       - BearerAuth: []
       summary: Update user profile
+      tags:
+      - customers
+  /customers/users/send-new-verify-email-link:
+    patch:
+      consumes:
+      - application/json
+      description: Send new email verification link on demand
+      parameters:
+      - description: Locale
+        in: header
+        name: X-Request-Locale
+        type: string
+      - description: Send new email verification link with body dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/userspb.SendNewEmailVerifyLinkRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errdetails.BadRequest'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+      summary: Send new email verify link
+      tags:
+      - customers
+  /customers/users/verify-email/{link}:
+    get:
+      consumes:
+      - application/json
+      description: Verify email by verification link from user email address
+      parameters:
+      - description: Locale
+        in: header
+        name: X-Request-Locale
+        type: string
+      - description: Verification link
+        in: path
+        name: link
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userspb.EmailVerifiedSuccess'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/userspb.VerifyEmailLinkExpired'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/userspb.VerifyEmailLinkNotFound'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputils.ErrorResponse'
+      summary: Verify email
       tags:
       - customers
 securityDefinitions:
